fix: foreignObjects sometimes have a hidden overflow (#130)

--- a/src/planner/Planner.less
+++ b/src/planner/Planner.less
@@ -203,7 +203,9 @@
 .planner-area-canvas,
 .planner-block-node-container,
 .planner-canvas svg,
-.planner-area-canvas svg {
+.planner-canvas foreignObject,
+.planner-area-canvas svg,
+.planner-area-canvas foreignObject {
     overflow: visible;
 }
 
